# cpp-unit-testing-setup

./: CMakeLists.txt
src/: CMakeLists.txt  helloworld.cpp  helloworld.h
tests/: CMakeLists.txt  hello_test.cpp  helloworld_test.cpp
